--- a/Kap/Factoring.adoc
+++ b/Kap/Factoring.adoc
@@ -1,6 +1,7 @@
-= Factoring
 
-NOTE: Med factoringfaktura menes at tredjepart (faktor) har overtatt kundefordringene, og denne utsteder fakturaen og angis som betalingsmottaker på fakturaen (PayeeParty)
+= Factoring [[Factoring]]
+
+NOTE: Med {factoring}faktura menes at tredjepart (faktor) har overtatt kundefordringene, og denne utsteder fakturaen og angis som betalingsmottaker på fakturaen (PayeeParty)
 
 
 Det er også viktig å merke seg at det kan forekomme factoring både for leasing, lån og vanlige salgsfakturaer.
@@ -10,36 +11,29 @@ Det er også viktig å merke seg at det kan forekomme factoring både for leasin
 
 === Fakturatype
 
-For at mottaker skal kunne legge tilrette for automatiserte prosesser, anbefaler vi at fakturatype settes til verdien "393" som står for "factored  invoice".footnoteref:[fakturatype, I henhold til kodeliste UNCL 1001]
+For at mottaker skal kunne legge tilrette for automatiserte prosesser, skal fakturatype settes til verdien "393" som står for "factored  invoice".footnoteref:[fakturatype, I henhold til kodeliste UNCL 1001]
 
-Fakturatype angis i elementet
-https://vefa.difi.no/ehf/gefeg/invoice/2.0/gu1.htm?https://vefa.difi.no/ehf/gefeg/invoice/2.0/gu11.htm[`InvoiceTypeCode`] slik:
+Fakturatype angis i elementet {G_fakturatype} slik:
 
 [source,xml]
+.Eksempel fakturatype factoring
 ----
-<cbc:InvoiceTypeCode>393<cbc:InvoiceTypeCode>
+include::../Source/Factoring.xml[tags=type]
 ----
 
 === Betalingsmottaker
 
-En factoringfaktura er som spesifisert over her en faktura der betalingsmottaker er en annen part enn selger/leverandør. I en slik faktura, angis selger som vanlig i `AccountingSupplierParty`, mens betalingsmottaker (faktor) angis i elementet `PayeeParty`:
+En factoringfaktura er som spesifisert over, en faktura der betalingsmottaker er en annen part enn selger/leverandør. I en slik faktura, angis selger som vanlig i {G_supplier}, mens betalingsmottaker (faktor) angis i elementet {G_payee}:
 
+Videre beskrivelse av ulike parter i en faktura finner du i {V_roller}.
 
 [source,xml]
+.Eksempel på betalingsmottaker
 ----
-<cac:PayeeParty>
-	<cac:PartyIdentification>
-		<cbc:ID schemeID="GLN">2298740918237</cbc:ID>
-	</cac:PartyIdentification>
-	<cac:PartyName>
-		<cbc:Name>Faktoringselskap AS</cbc:Name>
-	</cac:PartyName>
-	<cac:PartyLegalEntity>
-		<cbc:CompanyID schemeID="NO:ORGNR">989823401</cbc:CompanyID>
-	</cac:PartyLegalEntity>
-</cac:PayeeParty>
-
+include::../Source/Factoring.xml[tags=payee]
 ----
 
-Eksempelfil:
-https://github.com/OpenPEPPOL/finansveileder/blob/master/Examples/Factoring.xml[Factoring.xml]
+== Eksempelfil
+
+Fullstendig EHF eksempelfil finnes vedlagt som
+link:{sourcedir}/Source/Factoring.xml[Factoring.xml]
